# backend/api-gateway/src/routes/customers.js
@@ -2,7 +2,7 @@ const express = require('express');
 const router = express.Router();
 const  {validateCustomer }= require('../validators/customer');
 const { authenticateJWT } = require('../middlewares/authenticate');
-const { createCustomer, getCustomers } = require('../controllers/customersController');
+const { createCustomer, getCustomers, searchCustomers } = require('../controllers/customersController');
 
 
 router.post(
@@ -16,5 +16,7 @@ router.get(
   authenticateJWT,
   getCustomers
 );
+
+router.get('/search', authenticateJWT, searchCustomers);
 
 module.exports = router;
